fix: bag of active and rem of txt

--- a/cssMemSLider/index.html
+++ b/cssMemSLider/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/cssMemSlider/style.css">
+    <link rel="stylesheet" href="/cssMemSlider/cssMemSLider/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -20,10 +20,10 @@
                 <div class="sliderS">
 
 
-                    <div class="mem R1"><img src="/cssMemSlider/imagesMem/avengers-capitain-america-hulk-iron-man-Favim.com-916440.jpg" alt=""></div>
-                    <div class="mem"><img src="/cssMemSlider/imagesMem/deadpull.png" alt=""></div>
-                    <div class="mem"><img src="/cssMemSlider/imagesMem/osmonog.jpg" alt=""></div>
-                    <div class="mem"><img src="/cssMemSlider/imagesMem/troll.jpg" alt=""></div>
+                    <div class="mem R1"><img src="/cssMemSlider/cssMemSLider/imagesMem/avengers-capitain-america-hulk-iron-man-Favim.com-916440.jpg" alt=""></div>
+                    <div class="mem"><img src="/cssMemSlider/cssMemSLider/imagesMem/deadpull.png" alt=""></div>
+                    <div class="mem"><img src="/cssMemSlider/cssMemSLider/imagesMem/osmonog.jpg" alt=""></div>
+                    <div class="mem"><img src="/cssMemSlider/cssMemSLider/imagesMem/troll.jpg" alt=""></div>
                     
                 </div>
             </div>
